start working on the kmeans web page

--- a/kmeans/Makefile
+++ b/kmeans/Makefile
@@ -1,11 +1,14 @@
 CC = gcc -O3 -Wall -Wextra
 LM = -lm
 
-prog = ho
+bins = test
 
-test: test.c kmeans.h cholesky.h
+bins : %: %.c kmeans.h cholesky.h
 	$(CC) $< -o $@ $(LM)
 
 clean:
-	rm -rf $(prog) a.out *~ .*.un~ */*~ */.*.un~ *.dat
-	rstrip.py
+	rm -rf $(prog) a.out *~ .*.un~ */*~ */.*.un~ *.dat $(bins)
+	rstrip.py -Rlv
+
+Dropbox: clean
+	rsync -avzL --exclude="*~" * ~/Dropbox/code/kmeans/
