--- a/lj/Makefile
+++ b/lj/Makefile
@@ -2,18 +2,18 @@ CC = gcc -O3 -Wall -Wextra
 LM = -lm
 
 srcs = $(wildcard *.c)
-bins = $(patsubst %.c, %, $(srcs))
+bins = $(patsubst %.c,%, $(srcs))
 deps = $(wildcard *.h)
 
 all: $(bins)
-	echo $(bins)
 
 $(bins): % : %.c $(deps)
 	$(CC) $< -o $@ $(LM)
 
 clean:
-	rm -rf $(bins) a.out *~ .*.un~ */*~ */.*.un~
+	rm -rf $(bins) a.out *~ .*.un~ */*~ */.*.un~ *.pos
 	rstrip.py -Rlv
 
 Dropbox: clean
-	rsync -avzL --exclude="*~" * ~/Dropbox/code/pca/
+	rsync -avzL --exclude="*~" * ~/Dropbox/code/lj/
+
