update randgam, add randchisqr

--- a/mtrand/Makefile
+++ b/mtrand/Makefile
@@ -2,7 +2,7 @@ CC = gcc -O3 -Wall -Wextra
 LM = -lm
 
 srcs = $(wildcard *.c)
-bins = $(patsubst %.c, %, $(srcs))
+bins = $(patsubst %.c,%, $(srcs))
 deps = $(wildcard *.h)
 
 all: $(bins)
@@ -11,8 +11,9 @@ $(bins): % : %.c $(deps)
 	$(CC) $< -o $@ $(LM)
 
 clean:
-	rm -rf $(bins) a.out *~ .*.un~ */*~ */.*.un~
+	rm -rf $(bins) a.out *~ .*.un~ */*~ */.*.un~ *.dat
 	rstrip.py -Rlv
 
 Dropbox: clean
-	rsync -avzL --exclude="*~" * ~/Dropbox/code/pca/
+	rsync -avzL --exclude="*~" * ~/Dropbox/code/mtrand/
+
