improve ion.html

--- a/ewald/Makefile
+++ b/ewald/Makefile
@@ -1,12 +1,11 @@
 clean:
 	rm -f *~ .*~ */*~ */.*~ out* topol.top posre.itp \#*
-	rstrip.py * js/*.js
+	rstrip.py *.html *.c *.h README js/*.js
 
 bdir=/Bossman/cz1/snippets/ewald
 
 Bossman:
-	rm -f *~ js/*~ .*.un~ js/.*.un~
-	rstrip.py -R js/* *
+	$(MAKE) clean
 	../htmlpack.py
 	rsync -avzL js/*.js $(bdir)/js
 	rsync -avz ion.html $(bdir)/
