mie: add a few plotting scripts

--- a/mie/doc/fig/Makefile
+++ b/mie/doc/fig/Makefile
@@ -4,11 +4,10 @@ EPSGP = $(filter-out $(PNGGP), $(GP))
 EPS = $(patsubst %.gp,%.eps, $(EPSGP))
 PDF = $(patsubst %.gp,%.pdf, $(EPSGP))
 PNG = $(patsubst %.gp,%.png, $(PNGGP))
-XPDF =
 epsdeps = Makefile $(wildcard ../data/*/*.dat)
 pngdeps = Makefile
 
-all: $(PNG) $(PDF) $(XPDF)
+all: $(PNG) $(PDF)
 
 $(PNG) : %.png : %.gp $(pngdeps)
 	gnuplot $<
@@ -18,11 +17,6 @@ $(PDF) : %.pdf : %.eps $(epsdeps)
 
 $(EPS) : %.eps : %.gp $(epsdeps)
 	gnuplot $<
-
-$(XPDF): figs.tex
-	pdflatex -shell-escape $<
-	mv figs-figure0.pdf massq.pdf
-	mv figs-figure1.pdf vardep.pdf
 
 clean:
 	rm -f $(PDF) $(EPS) $(PNG) *~
