--- a/src/common/c/vct/_tests/Makefile
+++ b/src/common/c/vct/_tests/Makefile
@@ -1,6 +1,7 @@
 prj = vct
 
-CC = gcc -O3 -Wall -Wextra
+INCLUDES = -I..
+CC = gcc -O3 -Wall -Wextra $(INCLUDES)
 LM = -lm
 
 srcs = $(wildcard *.c)
