edit README.md, modify a few files

--- a/src/molsimul/methods/wl/invt/Makefile
+++ b/src/molsimul/methods/wl/invt/Makefile
@@ -11,7 +11,7 @@ bins = $(patsubst %.c, %, $(srcs))
 bins_clang = $(patsubst %.c, %_clang, $(srcs))
 bins_dbg = $(patsubst %.c, %_d, $(srcs))
 deps = Makefile
-includes =
+includes = -I../../../../common/c
 
 bins: $(bins)
 
