--- a/src/molsimul/methods/wham/is2/Makefile
+++ b/src/molsimul/methods/wham/is2/Makefile
@@ -1,20 +1,20 @@
-CC = icc -g -O2 -Wall -Wremarks
-LM =
-#CC = gcc -g -O3 -Wall -Wextra
-#LM = -lm
+#CC = icc -g -O2 -Wall -Wremarks
+#LM =
+CC = gcc -g -O3 -Wall -Wextra
+LM = -lm
 
 srcs = $(wildcard *.c)
 bins = $(patsubst %.c,%, $(srcs))
 deps = $(wildcard ../*.h) $(wildcard *.h) Makefile
+includes = -I../../../../common/c \
+           -I../../../systems/ising2d/c \
+           -I../../../methods
 
 all: $(bins)
 
 $(bins): % : %.c $(deps)
-	$(CC) $< -o $@ $(LM)
+	$(CC) $(includes) $< -o $@ $(LM)
 
 clean:
 	rm -rf $(bins) a.out *~ .*.un~ */*~ */.*.un~ *.dat *.pos
-	rstrip.py -Rlv
 
-Dropbox: clean
-	rsync -avzL --exclude="*~" * ~/Dropbox/code/wham/
